--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 #MYSQL
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/Shopping?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=Shopping_user
-spring.datasource.password=Shopping_password
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/Shopping?serverTimezone=Europe/Warsaw&useSSL=False
+#spring.datasource.username=Shopping_user
+#spring.datasource.password=Shopping_password
+
+#POSTGRESQL
+spring.jpa.database=postgresql
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
